Add images, footer and menu

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
           <li>
             <a href="/">Agencja</a>
           </li>
-          <li>Portfolio</li>
+          <li>
+            <a href="./portfolio.html">Portfolio<a>
+          </li>
           <li>Kontakt</li>
         </ul>
       </nav>
