--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="/">Agencja</a>
           </li>
           <li>
-            <a href="./portfolio.html">Portfolio<a>
+            <a href="portfolio.html">Portfolio<a>
           </li>
           <li>Kontakt</li>
         </ul>
