--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,8 @@
           <figure class="project-1">
             <img src="images/imgH.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Technocrack 
-              Strona internetowa
+              Technocrack Strona 
+              internetowa
             </figcaption>
           </figure>
         </li>
@@ -89,8 +89,7 @@
           <figure class="project-3">
             <img src="images/imgJ.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Restauracja Seafood 
-              plikacja
+              Restauracja Seafood Aplikacja
             </figcaption>
           </figure>
         </li>
@@ -152,16 +151,16 @@
     <!--Footer-->
 
     <footer>
-        <a href="/" class="logo-bottom">WebStudio</a>
-        <address class="data-contact-bottom">
-          <ul>
-            <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li>
-              <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>+48 111 111 111</li>
-          </ul>
-        </address>
+      <a href="/" class="logo-bottom">WebStudio</a>
+      <address class="data-contact-bottom">
+        <ul>
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li>
+            <a href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>+48 111 111 111</li>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
