change styles in header and footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -155,10 +155,10 @@
       <address class="data-contact-bottom">
         <ul>
           <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li>
+          <li class="e-mail-bottom">
             <a href="mailto:info@example.com">info@example.com</a>
           </li>
-          <li>+48 111 111 111</li>
+          <li class="telephone-bottom">+48 111 111 111</li>
         </ul>
       </address>
     </footer>
