Changes in header and footer

--- a/index.html
+++ b/index.html
@@ -5,16 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <!--Header-->
 
     <header>
-      <a href="">WebStudio</a>
+      <a href="./index.html" class="logo-top">WebStudio</a>
 
       <!--Menu navigation-->
 
-      <nav>
+      <nav class="menu-navigation">
+        <ul>
+          <li class="menu-navigation-item-agency">Agencja</li>
+          <li class="menu-navigation-item-portfolio">
+            <a href="/portfolio.html">Portfolio</a>
+          </li>
+          <li class="menu-navigation-item-contact">Kontakt</li>
+        </ul>
+      </nav>
+
+      <ul>
+        <li class="e-mail-top">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="telephone-top">+48 111 111 111</li>
+      </ul>
+
+    <!-- <header>
+      <a href="">WebStudio</a> -->
+
+      <!--Menu navigation-->
+
+      <!-- <nav>
         <ul>
           <li>
             <a href="/">Agencja</a>
@@ -32,15 +55,16 @@
         </li>
         <li>+48 111 111 111</li>
       </ul>
-      <div>
-        <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
-      </div>
-    </header>
+      
+    </header> -->
 
     <!--Main-->
 
     <main>
+      <div>
+        <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usługę</button>
+      </div>
       <ul>
         <li>
           LOREM IPSUM
