--- a/portfolio.html
+++ b/portfolio.html
@@ -6,38 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
   </head>
-  <body class="page">
+  <body>
     <!--Header-->
 
-    <header>
-      <a href="./index.html" class="logo-top">WebStudio</a>
+    <header class="header">
+      <a href="/index.html" class="logo-header">WebStudio</a>
 
       <!--Menu navigation-->
 
       <nav class="menu-navigation">
-        <ul>
+        <ul class="menu-navigation-list">
           <li class="menu-navigation-item-agency">Agencja</li>
           <li class="menu-navigation-item-portfolio">
-            <a href="">Portfolio</a>
+            <a class="menu-navigation-item-portfolio-link" href="">Portfolio</a>
           </li>
           <li class="menu-navigation-item-contact">Kontakt</li>
         </ul>
       </nav>
 
-      <ul>
-        <li class="e-mail-top">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contact-details-header">
+        <li>
+          <a
+            class="contact-details-header-mail"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li class="telephone-top">+48 111 111 111</li>
+        <li class="contact-details-header-telephone">+48 111 111 111</li>
       </ul>
 
       <!--Menu-->
@@ -71,8 +73,8 @@
           <figure class="project-1">
             <img src="images/imgH.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Technocrack Strona 
-              internetowa
+              Technocrack
+              <span>Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
@@ -80,8 +82,8 @@
           <figure class="project-2">
             <img src="images/imgI.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Grafika New Orlean vs Golden Star 
-              Dizajn
+              Grafika New Orlean vs Golden Star
+              <span>Dizajn</span>
             </figcaption>
           </figure>
         </li>
@@ -89,7 +91,8 @@
           <figure class="project-3">
             <img src="images/imgJ.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Restauracja Seafood Aplikacja
+              Restauracja Seafood
+              <span>Aplikacja</span>
             </figcaption>
           </figure>
         </li>
@@ -97,8 +100,8 @@
           <figure class="project-4">
             <img src="images/imgK.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Project Prime 
-              Marketing
+              Project Prime
+              <span>Marketing</span>
             </figcaption>
           </figure>
         </li>
@@ -106,8 +109,8 @@
           <figure class="project-5">
             <img src="images/imgL.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Project Boxes 
-              Aplikacja
+              Project Boxes
+              <span>Aplikacja</span>
             </figcaption>
           </figure>
         </li>
@@ -115,8 +118,8 @@
           <figure class="project-6">
             <img src="images/imgM.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Inspirations has no Borders 
-              Strona internetowa
+              Inspirations has no Borders
+              <span>Strona internetowa</span>
             </figcaption>
           </figure>
         </li>
@@ -124,24 +127,26 @@
           <figure class="project-7">
             <img src="images/imgN.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Magazyn Limited Edition 
-              Dizajn
+              Magazyn Limited Edition
+              <span>Dizajn</span>
             </figcaption>
           </figure>
         </li>
         <li>
           <figure class="project-8">
             <img src="images/imgO.jpg" width="370" height="294" />
-            <figcaption class="picture-name">Projekt LAB 
-              Marketing</figcaption>
+            <figcaption class="picture-name">
+              Projekt LAB
+              <span>Marketing</span>
+            </figcaption>
           </figure>
         </li>
         <li>
           <figure class="project-9">
             <img src="images/imgP.jpg" width="370" height="294" />
             <figcaption class="picture-name">
-              Growing Business 
-              Aplikacja
+              Growing Business
+              <span>Aplikacja</span>
             </figcaption>
           </figure>
         </li>
@@ -150,15 +155,21 @@
 
     <!--Footer-->
 
-    <footer>
-      <a href="/" class="logo-bottom">WebStudio</a>
-      <address class="data-contact-bottom">
-        <ul>
-          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li class="e-mail-bottom">
-            <a href="mailto:info@example.com">info@example.com</a>
+    <footer class="footer">
+      <a href="/" class="logo-footer">WebStudio</a>
+      <address>
+        <ul class="contact-details-footer">
+          <li class="contact-details-footer-address">
+            m. Warszawa, Aleje Jerozolimskie 21
           </li>
-          <li class="telephone-bottom">+48 111 111 111</li>
+          <li class="contact-details-footer-mail">
+            <a
+              class="contact-details-footer-mail-link"
+              href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="contact-details-footer-telephone">+48 111 111 111</li>
         </ul>
       </address>
     </footer>
