--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li class="menu-navigation-item-agency">Agencja</li>
           <li class="menu-navigation-item-portfolio">
-            <a href="/portfolio.html">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-navigation-item-contact">Kontakt</li>
         </ul>
