--- a/index.html
+++ b/index.html
@@ -10,26 +10,30 @@
   <body>
     <!--Header-->
 
-    <header>
-      <a href="./index.html" class="logo-top">WebStudio</a>
+    <header class="header">
+      <a href="" class="logo-header">WebStudio</a>
 
       <!--Menu navigation-->
 
       <nav class="menu-navigation">
-        <ul>
+        <ul class="menu-navigation-list">
           <li class="menu-navigation-item-agency">Agencja</li>
           <li class="menu-navigation-item-portfolio">
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="menu-navigation-item-portfolio-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-navigation-item-contact">Kontakt</li>
         </ul>
       </nav>
 
-      <ul>
-        <li class="e-mail-top">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <ul class="contact-details-header">
+        <li class="contact-details-header-mail">
+          <a
+            class="contact-details-header-mail-link"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
-        <li class="telephone-top">+48 111 111 111</li>
+        <li class="contact-details-header-telephone">+48 111 111 111</li>
       </ul>
 
     <!-- <header>
@@ -207,15 +211,21 @@
 
     <!--Footer-->
 
-    <footer>
-      <a href="/">WebStudio</a>
+    <footer class="footer">
+      <a href="/" class="logo-footer">WebStudio</a>
       <address>
-        <ul>
-          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li>
-            <a href="mailto:info@example.com">info@example.com</a>
+        <ul class="contact-details-footer">
+          <li class="contact-details-footer-address">
+            m. Warszawa, Aleje Jerozolimskie 21
           </li>
-          <li>+48 111 111 111</li>
+          <li class="contact-details-footer-mail">
+            <a
+              class="contact-details-footer-mail-link"
+              href="mailto:info@example.com"
+              >info@example.com</a
+            >
+          </li>
+          <li class="contact-details-footer-telephone">+48 111 111 111</li>
         </ul>
       </address>
     </footer>
