--- a/portfolio.html
+++ b/portfolio.html
@@ -32,123 +32,147 @@
       </nav>
 
       <ul class="contact-details-header">
-        <li>
+        <li class="contact-details-header-mail">
           <a
-            class="contact-details-header-mail"
+            class="contact-details-header-mail-link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-details-header-telephone">+48 111 111 111</li>
-      </ul>
-
-      <!--Menu-->
-
-      <ul class="menu">
-        <li>
-          <button class="menu-item-all" type="button">Wszystkie</button>
-        </li>
-        <li>
-          <button class="menu-item-pages" type="button">Strony</button>
-        </li>
-        <li>
-          <button class="menu-item-applications" type="button">
-            Aplikacje
-          </button>
-        </li>
-        <li>
-          <button class="menu-item-design" type="button">Dizajn</button>
-        </li>
-        <li>
-          <button class="menu-item-marketing" type="button">Marketing</button>
+        <li class="contact-details-header-telephone">
+          <a class="contact-details-header-telephone-link" href=""
+            >+48 111 111 111</a
+          >
         </li>
       </ul>
     </header>
 
     <!--Main-->
-
+    <!--MENU-->
     <main>
+      <ul class="menu">
+        <li class="menu-item-all">
+          <button class="menu-item-all-btn" type="button">Wszystkie</button>
+        </li>
+        <li class="menu-item-pages">
+          <button class="menu-item-pages-btn" type="button">Strony</button>
+        </li>
+        <li class="menu-item-applications">
+          <button class="menu-item-applications-btn" type="button">
+            Aplikacje
+          </button>
+        </li>
+        <li class="menu-item-design">
+          <button class="menu-item-design-btn" type="button">Dizajn</button>
+        </li>
+        <li class="menu-item-marketing">
+          <button class="menu-item-marketing-btn" type="button">
+            Marketing
+          </button>
+        </li>
+      </ul>
+
+      <!--PROJECTS-->
+
       <ul class="projects">
-        <li>
-          <figure class="project-1">
-            <img src="images/imgH.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Technocrack
-              <span>Strona internetowa</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-first">
+          <div class="project-item-first-box">
+            <figure>
+              <img src="images/imgH.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Technocrack
+                <span class="category-name">Strona internetowa</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-2">
-            <img src="images/imgI.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Grafika New Orlean vs Golden Star
-              <span>Dizajn</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-second">
+          <div class="project-item-second-box">
+            <figure>
+              <img src="images/imgI.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Grafika New Orlean vs Golden Star
+                <span class="category-name">Dizajn</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-3">
-            <img src="images/imgJ.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Restauracja Seafood
-              <span>Aplikacja</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-third">
+          <div class="project-item-third-box">
+            <figure>
+              <img src="images/imgJ.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Restauracja Seafood
+                <span class="category-name">Aplikacja</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-4">
-            <img src="images/imgK.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Project Prime
-              <span>Marketing</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-fourth">
+          <div class="project-item-fourth-box">
+            <figure>
+              <img src="images/imgK.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Project Prime
+                <span class="category-name">Marketing</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-5">
-            <img src="images/imgL.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Project Boxes
-              <span>Aplikacja</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-fifth">
+          <div class="project-item-fifth-box">
+            <figure>
+              <img src="images/imgL.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Project Boxes
+                <span class="category-name">Aplikacja</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-6">
-            <img src="images/imgM.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Inspirations has no Borders
-              <span>Strona internetowa</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-sixth">
+          <div class="project-item-sixth-box">
+            <figure>
+              <img src="images/imgM.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Inspirations has no Borders
+                <span class="category-name">Strona internetowa</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-7">
-            <img src="images/imgN.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Magazyn Limited Edition
-              <span>Dizajn</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-seventh">
+          <div class="project-item-seventh-box">
+            <figure>
+              <img src="images/imgN.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Magazyn Limited Edition
+                <span class="category-name">Dizajn</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-8">
-            <img src="images/imgO.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Projekt LAB
-              <span>Marketing</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-eighth">
+          <div class="project-item-eighth-box">
+            <figure>
+              <img src="images/imgO.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Projekt LAB
+                <span class="category-name">Marketing</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
-        <li>
-          <figure class="project-9">
-            <img src="images/imgP.jpg" width="370" height="294" />
-            <figcaption class="picture-name">
-              Growing Business
-              <span>Aplikacja</span>
-            </figcaption>
-          </figure>
+        <li class="project-item-neinth">
+          <div class="project-item-neinth-box">
+            <figure>
+              <img src="images/imgP.jpg" width="370" height="294" />
+              <figcaption class="project-name">
+                Growing Business
+                <span class="category-name">Aplikacja</span>
+              </figcaption>
+            </figure>
+          </div>
         </li>
       </ul>
     </main>
@@ -156,7 +180,7 @@
     <!--Footer-->
 
     <footer class="footer">
-      <a href="/" class="logo-footer">WebStudio</a>
+      <a href="" class="logo-footer">WebStudio</a>
       <address>
         <ul class="contact-details-footer">
           <li class="contact-details-footer-address">
@@ -169,7 +193,11 @@
               >info@example.com</a
             >
           </li>
-          <li class="contact-details-footer-telephone">+48 111 111 111</li>
+          <li class="contact-details-footer-telephone">
+            <a class="contact-details-footer-telephone-link" href=""
+              >+48 111 111 111</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
