--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,7 @@
     <!--Main-->
     <!--MENU-->
     <main>
+      <div></div>
       <ul class="menu">
         <li class="menu-item-all">
           <button class="menu-item-all-btn" type="button">Wszystkie</button>
