--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!--Header-->
 
     <header class="header">
-      <a href="/index.html" class="logo-header">WebStudio</a>
+      <a href="./index.html" class="logo-header">WebStudio</a>
 
       <!--Menu navigation-->
 
