--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!--Header-->
@@ -19,7 +19,11 @@
         <ul class="menu-navigation-list">
           <li class="menu-navigation-item-agency">Agencja</li>
           <li class="menu-navigation-item-portfolio">
-            <a class="menu-navigation-item-portfolio-link" href="./portfolio.html">Portfolio</a>
+            <a
+              class="menu-navigation-item-portfolio-link"
+              href="./portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="menu-navigation-item-contact">Kontakt</li>
         </ul>
@@ -35,13 +39,14 @@
         </li>
         <li class="contact-details-header-telephone">+48 111 111 111</li>
       </ul>
+    </header>
 
     <!-- <header>
       <a href="">WebStudio</a> -->
 
-      <!--Menu navigation-->
+    <!--Menu navigation-->
 
-      <!-- <nav>
+    <!-- <nav>
         <ul>
           <li>
             <a href="/">Agencja</a>
