Change name of class header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!--Header-->
 
-    <header class="header">
+    <header class="headder">
       <a href="" class="logo-header">WebStudio</a>
 
       <!--Menu navigation-->
