--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   <body>
     <!--Header-->
 
-    <header class="headder">
+    <header>
       <a href="./index.html" class="logo-header">WebStudio</a>
 
       <!--Menu navigation-->
