Changes in index.html

--- a/index.html
+++ b/index.html
@@ -37,84 +37,58 @@
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-details-header-telephone">+48 111 111 111</li>
+        <li class="contact-details-header-telephone">
+          <a class="contact-details-header-telephone-link" href=""
+            >+48 111 111 111</a
+          >
+        </li>
       </ul>
     </header>
-
-    <!-- <header>
-      <a href="">WebStudio</a> -->
-
-    <!--Menu navigation-->
-
-    <!-- <nav>
-        <ul>
-          <li>
-            <a href="/">Agencja</a>
-          </li>
-          <li>
-            <a href="portfolio.html">Portfolio<a>
-          </li>
-          <li>Kontakt</li>
-        </ul>
-      </nav>
-
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>+48 111 111 111</li>
-      </ul>
-      
-    </header> -->
 
     <!--Main-->
 
     <main>
-      <div>
-        <h1>EFEKTYWNE ROZWIĄZANIA<br />DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+      <div class="head-main-box">
+        <h1 class="head-main">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="head-main-btn" type="button">Zamów usługę</button>
       </div>
-      <ul>
-        <li>
+      <ul class="lorem">
+        <li class="lorem-item-first">
           LOREM IPSUM
-          <p>
-            Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <p class="lorem-item-first-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
+        <li class="lorem-item-second">
           LOREM IPSUM
-          <p>
-            Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <p class="lorem-item-second-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
+        <li class="lorem-item-third">
           LOREM IPSUM
-          <p>
-            Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <p class="lorem-item-third-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
+        <li class="lorem-item-fourth">
           LOREM IPSUM
-          <p>
-            Lorem ipsum dolor sit amet, consectetur<br />
-            adipiscing elit. Nam vel arcu sem. Sed<br />
-            non sodales dui. Interdum et malesuada
+          <p class="lorem-item-fourth-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+            arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
       </ul>
 
       <!--Section no.1-->
 
-      <section>
-        <h2>Czym się zajmujemy</h2>
-        <ul>
-          <li>
+      <section class="section-job">
+        <h2 class="head-section-job">Czym się zajmujemy</h2>
+        <ul class="section-job-list">
+          <li class="section-job-list-item-first">
             <img
               src="images/imgA.jpg"
               alt="Websites programming"
@@ -122,7 +96,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="section-job-list-item-second">
             <img
               src="images/imgB.jpg"
               alt="Positioning of websites"
@@ -130,7 +104,7 @@
               height="294"
             />
           </li>
-          <li>
+          <li class="section-job-list-item-third">
             <img
               src="images/imgC.jpg"
               alt="Computer graphics"
@@ -143,10 +117,10 @@
 
       <!--Section no.2-->
 
-      <section>
-        <h2>Nasz zespół</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="head-section-team">Nasz zespół</h2>
+        <ul class="section-team-list">
+          <li class="section-team-list-item-first">
             <div>
               <figure>
                 <img
@@ -155,14 +129,14 @@
                   width="270"
                   height="260"
                 />
-                <figcaption>
-                  John Doe<br />
-                  <span> Product Designer </span>
+                <figcaption class="team-name">
+                  John Doe
+                  <span class="job-position"> Product Designer </span>
                 </figcaption>
               </figure>
             </div>
           </li>
-          <li>
+          <li class="section-team-list-item-second">
             <div>
               <figure>
                 <img
@@ -171,14 +145,14 @@
                   width="270"
                   height="260"
                 />
-                <figcaption>
-                  John Doe<br />
-                  <span> Frontend Developer </span>
+                <figcaption class="team-name">
+                  John Doe
+                  <span class="job-position"> Frontend Developer </span>
                 </figcaption>
               </figure>
             </div>
           </li>
-          <li>
+          <li class="section-team-list-item-third">
             <div>
               <figure>
                 <img
@@ -187,14 +161,14 @@
                   width="270"
                   height="260"
                 />
-                <figcaption>
-                  John Doe<br />
-                  <span> Marketing </span>
+                <figcaption class="team-name">
+                  John Doe
+                  <span class="job-position"> Marketing </span>
                 </figcaption>
               </figure>
             </div>
           </li>
-          <li>
+          <li class="section-team-list-item-fourth">
             <div>
               <figure>
                 <img
@@ -203,9 +177,9 @@
                   width="270"
                   height="260"
                 />
-                <figcaption>
-                  John Doe<br />
-                  <span> UI Designer </span>
+                <figcaption class="team-name">
+                  John Doe
+                  <span class="job-position"> UI Designer </span>
                 </figcaption>
               </figure>
             </div>
@@ -217,20 +191,24 @@
     <!--Footer-->
 
     <footer class="footer">
-      <a href="/" class="logo-footer">WebStudio</a>
+      <a href="/" class="logo-footer-index">WebStudio</a>
       <address>
-        <ul class="contact-details-footer">
-          <li class="contact-details-footer-address">
+        <ul class="contact-details-footer-index">
+          <li class="contact-details-footer-address-index">
             m. Warszawa, Aleje Jerozolimskie 21
           </li>
           <li class="contact-details-footer-mail">
             <a
-              class="contact-details-footer-mail-link"
+              class="contact-details-footer-mail-link-index"
               href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li class="contact-details-footer-telephone">+48 111 111 111</li>
+          <li class="contact-details-footer-telephone-index">
+            <a class="contact-details-footer-telephone-link-index" href=""
+              >+48 111 111 111</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
