Add pseudo class :visited

--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
         <ul class="menu-navigation-list">
           <li class="menu-navigation-item-agency">Agencja</li>
           <li class="menu-navigation-item-portfolio">
-            <a class="menu-navigation-item-portfolio-link" href="">Portfolio</a>
+            <a class="menu-navigation-item-portfolio-link" href="./portfolio.html">Portfolio</a>
           </li>
           <li class="menu-navigation-item-contact">Kontakt</li>
         </ul>
