Changes names of classes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--Header-->
 
     <header>
-      <a href="" class="logo-header">WebStudio</a>
+      <a href="" class="logo-top">WebStudio</a>
 
       <!--Menu navigation-->
 
@@ -33,16 +33,16 @@
         </ul>
       </nav>
 
-      <ul class="contact-details-header">
-        <li class="contact-details-header-mail">
+      <ul class="contact-details-top">
+        <li class="contact-details-top-mail">
           <a
-            class="contact-details-header-mail-link"
+            class="contact-details-top-mail-link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-details-header-telephone">
-          <a class="contact-details-header-telephone-link" href=""
+        <li class="contact-details-top-telephone">
+          <a class="contact-details-top-telephone-link" href=""
             >+48 111 111 111</a
           >
         </li>
@@ -89,10 +89,10 @@
 
       <!--Section no.1-->
 
-      <section class="section-job">
-        <h2 class="head-section-job">Czym się zajmujemy</h2>
-        <ul class="section-job-list">
-          <li class="section-job-list-item-first">
+      <section class="our-job">
+        <h2 class="head-our-job">Czym się zajmujemy</h2>
+        <ul class="our-job-list">
+          <li class="our-job-list-item-first">
             <img
               src="images/imgA.jpg"
               alt="Websites programming"
@@ -100,7 +100,7 @@
               height="294"
             />
           </li>
-          <li class="section-job-list-item-second">
+          <li class="our-job-list-item-second">
             <img
               src="images/imgB.jpg"
               alt="Positioning of websites"
@@ -108,7 +108,7 @@
               height="294"
             />
           </li>
-          <li class="section-job-list-item-third">
+          <li class="our-job-list-item-third">
             <img
               src="images/imgC.jpg"
               alt="Computer graphics"
@@ -121,10 +121,10 @@
 
       <!--Section no.2-->
 
-      <section class="section-team">
-        <h2 class="head-section-team">Nasz zespół</h2>
-        <ul class="section-team-list">
-          <li class="section-team-list-item-first">
+      <section class="our-team">
+        <h2 class="head-our-team">Nasz zespół</h2>
+        <ul class="our-team-list">
+          <li class="our-team-list-item-first">
             <div>
               <figure>
                 <img
@@ -140,7 +140,7 @@
               </figure>
             </div>
           </li>
-          <li class="section-team-list-item-second">
+          <li class="our-team-list-item-second">
             <div>
               <figure>
                 <img
@@ -156,7 +156,7 @@
               </figure>
             </div>
           </li>
-          <li class="section-team-list-item-third">
+          <li class="our-team-list-item-third">
             <div>
               <figure>
                 <img
@@ -172,7 +172,7 @@
               </figure>
             </div>
           </li>
-          <li class="section-team-list-item-fourth">
+          <li class="our-team-list-item-fourth">
             <div>
               <figure>
                 <img
@@ -194,22 +194,22 @@
 
     <!--Footer-->
 
-    <footer class="footer">
-      <a href="/" class="logo-footer-index">WebStudio</a>
+    <footer class="foter">
+      <a href="/" class="logo-foter-index">WebStudio</a>
       <address>
-        <ul class="contact-details-footer-index">
-          <li class="contact-details-footer-address-index">
+        <ul class="contact-details-foter-index">
+          <li class="contact-details-foter-address-index">
             m. Warszawa, Aleje Jerozolimskie 21
           </li>
-          <li class="contact-details-footer-mail">
+          <li class="contact-details-foter-mail">
             <a
-              class="contact-details-footer-mail-link-index"
+              class="contact-details-foter-mail-link-index"
               href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li class="contact-details-footer-telephone-index">
-            <a class="contact-details-footer-telephone-link-index" href=""
+          <li class="contact-details-foter-telephone-index">
+            <a class="contact-details-foter-telephone-link-index" href=""
               >+48 111 111 111</a
             >
           </li>
