--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!--Header-->
 
     <header>
-      <a href="./index.html" class="logo-header">WebStudio</a>
+      <a href="./index.html" class="logo-top">WebStudio</a>
 
       <!--Menu navigation-->
 
@@ -31,16 +31,16 @@
         </ul>
       </nav>
 
-      <ul class="contact-details-header">
-        <li class="contact-details-header-mail">
+      <ul class="contact-details-top">
+        <li class="contact-details-top-mail">
           <a
-            class="contact-details-header-mail-link"
+            class="contact-details-top-mail-link"
             href="mailto:info@devstudio.com"
             >info@devstudio.com</a
           >
         </li>
-        <li class="contact-details-header-telephone">
-          <a class="contact-details-header-telephone-link" href=""
+        <li class="contact-details-top-telephone">
+          <a class="contact-details-top-telephone-link" href=""
             >+48 111 111 111</a
           >
         </li>
@@ -48,6 +48,7 @@
     </header>
 
     <!--Main-->
+
     <!--MENU-->
     
     <main>
@@ -180,22 +181,22 @@
 
     <!--Footer-->
 
-    <footer class="footer">
-      <a href="" class="logo-footer">WebStudio</a>
+    <footer class="foter">
+      <a href="" class="logo-foter">WebStudio</a>
       <address>
-        <ul class="contact-details-footer">
-          <li class="contact-details-footer-address">
+        <ul class="contact-details-foter">
+          <li class="contact-details-foter-address">
             m. Warszawa, Aleje Jerozolimskie 21
           </li>
-          <li class="contact-details-footer-mail">
+          <li class="contact-details-foter-mail">
             <a
-              class="contact-details-footer-mail-link"
+              class="contact-details-foter-mail-link"
               href="mailto:info@example.com"
               >info@example.com</a
             >
           </li>
-          <li class="contact-details-footer-telephone">
-            <a class="contact-details-footer-telephone-link" href=""
+          <li class="contact-details-foter-telephone">
+            <a class="contact-details-foter-telephone-link" href=""
               >+48 111 111 111</a
             >
           </li>
