--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
               >+48 111 111 111</a
             >
           </li>
+          <div></div>
         </ul>
       </address>
     </footer>
